KJG-18: refactoring & formatting

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -5,6 +5,8 @@
   "filterByDate": "Nach Datum filtern",
   "resetFilter": "Filter zurücksetzen",
 
+  "events": "Veranstaltungen",
+
   "greeting": "Hallo {name}!",
   "@greeting": {
     "placeholders": {
