KJG-18: added subscribe to newsletter button

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -19,5 +19,6 @@
   "news": "Neuigkeiten",
   "noNewsAvailable": "Wir konnten leider keine Neuigkeiten laden. Versuche es einfach später nochmal!",
   "activities": "Aktionen",
-  "noActivitiesAvailable": "Wir konnten leider keine Aktionen laden. Versuche es einfach später nochmal!"
+  "noActivitiesAvailable": "Wir konnten leider keine Aktionen laden. Versuche es einfach später nochmal!",
+  "subscribeToNewsletter": "Melde dich für unseren Newsletter an, um nichts mehr zu verpassen!"
 }
