redesign games screen

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -52,6 +52,8 @@
 
   "unknownError": "Unbekannter Fehler",
   "noInternet": "Keine Internetverbindung",
-  "loginError": "Falscher Nutzername oder Passwort"
+  "loginError": "Falscher Nutzername oder Passwort",
+
+  "gameDatabase": "Spieledatenbank"
 
 }
